<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgetPasswordPageVM" type="com.mohamedsapplication.app.modules.forgetpasswordpage.data.viewmodel.ForgetPasswordPageVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearForgetPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:id="@+id/txtForgetPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_156pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgetPasswordPageVM.forgetPasswordPageModel.txtForgetPassword}"
            style="@style/txtPoppinsmedium24" tools:text="@string/msg_forget_password"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtEntertheemail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_7pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgetPasswordPageVM.forgetPasswordPageModel.txtEntertheemail}"
            style="@style/txtPoppinsmedium12" tools:text="@string/msg_enter_the_email"/>
        <EditText
            android:background="@drawable/rectangle_bg_red_200_radius_15"
            android:drawablePadding="@dimen/_14pxh"
            android:drawableStart="@drawable/img_location"
            android:ellipsize="end" android:hint="@string/lbl_email"
            android:id="@+id/etUsername"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_148pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_23pxh"
            android:paddingTop="@dimen/_22pxv" android:singleLine="true"
            android:text="@={forgetPasswordPageVM.forgetPasswordPageModel.etUsernameValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnNext"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_33pxh"
            android:layout_marginTop="@dimen/_72pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_20pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_20pxv" android:singleLine="true"
            android:text="@string/lbl_next" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_next"/>
        <ImageView android:id="@+id/imageWaveTwelve"
            android:layout_height="@dimen/_126pxv"
            android:layout_marginTop="@dimen/_179pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY" imageRes="@{@drawable/img_wave12}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_wave12"/>
    </LinearLayout>
</layout>
