<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgetPasswordVirifyVM" type="com.mohamedsapplication.app.modules.forgetpasswordvirify.data.viewmodel.ForgetPasswordVirifyVM"/>
    </data>
    <LinearLayout android:gravity="start"
        android:id="@+id/linearForgetPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <TextView android:ellipsize="end"
            android:id="@+id/txtChangePassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_34pxh"
            android:layout_marginStart="@dimen/_34pxh"
            android:layout_marginTop="@dimen/_156pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@{forgetPasswordVirifyVM.forgetPasswordVirifyModel.txtChangePassword}"
            style="@style/txtPoppinsmedium24" tools:text="@string/lbl_change_password"/>
        <EditText
            android:background="@drawable/rectangle_bg_red_200_radius_15"
            android:drawableStart="@drawable/drawable_img_bxkey"
            android:ellipsize="end"
            android:hint="@string/lbl_new_passwotd"
            android:id="@+id/etPassword" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_129pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_22pxv" android:singleLine="true"
            android:text="@={forgetPasswordVirifyVM.forgetPasswordVirifyModel.etPasswordValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <EditText
            android:background="@drawable/rectangle_bg_red_200_radius_15"
            android:drawableStart="@drawable/drawable_img_bxkey"
            android:ellipsize="end"
            android:hint="@string/msg_confirm_passwot"
            android:id="@+id/etPasswordOne" android:inputType="text"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_23pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_24pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_20pxh"
            android:paddingTop="@dimen/_22pxv" android:singleLine="true"
            android:text="@={forgetPasswordVirifyVM.forgetPasswordVirifyModel.etPasswordOneValue}"
            android:textColorHint="@color/white_A700"
            style="@style/etSolidRounded" tools:ignore="Autofill"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnVerify"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_31pxh"
            android:layout_marginStart="@dimen/_31pxh"
            android:layout_marginTop="@dimen/_76pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_19pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_19pxv" android:singleLine="true"
            android:text="@string/lbl_verify"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_verify"/>
        <ImageView android:id="@+id/imageWaveTwelve"
            android:layout_height="@dimen/_126pxv"
            android:layout_marginTop="@dimen/_133pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY" imageRes="@{@drawable/img_wave12}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_wave12"/>
    </LinearLayout>
</layout>
